--- a/LMS/Areas/Teachers/Views/Test/Index.cshtml
+++ b/LMS/Areas/Teachers/Views/Test/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model List<LMS.Domain.ViewModels.TestListViewModel>
 @{
     ViewData["Title"] = "Index";
-    Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
+    Layout = "~/Areas/Teachers/Views/Shared/_TeacherLayout.cshtml";
 }
 
 <div class="panel-header panel-header-sm">
@@ -16,7 +16,7 @@
                             <div class="table-title">
                                 <div class="row">
                                     <div class="col-md-6">
-                                        <h2>Tests <b>View List</b></h2>
+                                        <h2><b>Tests View List</b></h2>
                                     </div>
                                     <div class="col-md-6 pull-right">
                                         <a asp-action="AddTest" asp-controller="Test" class="btn btn-success"><i class="material-icons">&#xE147;</i> <span>Add Test</span></a>
@@ -27,6 +27,9 @@
                                 <thead>
                                     <tr>
                                         <th>Name</th>
+                                        <th>Class</th>
+                                        <th>Section</th>
+                                        <th>Subject</th>
                                         <th>Questions</th>
                                         <th>Options</th>
                                         <th>Action</th>
@@ -37,8 +40,11 @@
                                     {
                                         <tr>
                                             <td>@item.Test_Name</td>
+                                            <td>@item.Class_Name</td>
+                                            <td>@item.Section_Name</td>
+                                            <td>@item.Subject_Name</td>
                                             <td>@item.Questions_Count</td>
-                                            <td><a asp-action="ManageTest" asp-controller="Test" asp-route-id="@item.Test_Id" class="btn btn-primary btn-sm">Manage</a></td>
+                                            <td><a asp-action="ManageTest" asp-controller="Test" asp-route-id="@item.Test_Id" class="btn btn-primary btn-sm" style="background-color:#ae7c38;">Manage Questions</a></td>
                                             <td>
                                                 <a href="#deleteTestModal" class="delete" id="delete" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="" data-original-title="Delete"></i></a>
                                                 <input type="hidden" class="Test_Id" value="@item.Test_Id" />
@@ -58,7 +64,7 @@
                             <div class="modal-content">
                                 <form method="post" asp-controller="Test" asp-action="DeleteTest">
                                     <div class="modal-header">
-                                        <h4 class="modal-title">Delete Teacher</h4>
+                                        <h4 class="modal-title">Delete Test</h4>
                                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                                     </div>
                                     <div class="modal-body">
@@ -121,6 +127,13 @@
             var Test_Id = $(this).parent().find('.Test_Id').val();
 
             $('#deleteTestModal #Test_Id').val(Test_Id);
+        });
+
+
+
+        $('#test').DataTable({
+            /* Disable initial sort */
+            // "aaSorting": []
         });
 
     });
