--- a/LMS/Areas/Admin/Views/Student/EditStudent.cshtml
+++ b/LMS/Areas/Admin/Views/Student/EditStudent.cshtml
@@ -90,7 +90,7 @@
                                                 <div class="col-md-4 pl-1">
                                                     <div class="form-group">
                                                         <label>Date Of Birth</label>
-                                                        <input asp-for="Student_DOB" class="form-control" type="datetime-local" data-val="true" data-val-required="The Student_DOB field is required." id="Student_DOB" name="Student_DOB" value="">
+                                                        <input asp-for="Student_DOB" class="form-control" type="date" data-val="true" data-val-required="The Student_DOB field is required." id="Student_DOB" name="Student_DOB" value="">
                                                         @*<input asp-for="Student_DOB" type="text" class="form-control" placeholder="DOB">*@
                                                     </div>
                                                 </div>
