--- a/LMS/Areas/Teachers/Views/Class/Lectures.cshtml
+++ b/LMS/Areas/Teachers/Views/Class/Lectures.cshtml
@@ -5,11 +5,9 @@
 }
 
 
-<div class="dashboard" id="dashboard">
-   
-    <div class="panel-header panel-header-sm">
-    </div>
-    <div class="content">
+<div class="panel-header panel-header-sm">
+</div>
+<div class="content">
         <div class="row">
             <div class="col-md-12">
                 <div class="card">
@@ -23,7 +21,7 @@
                                             <h2>Lecture  <b>List</b></h2>
                                         </div>
                                         <div class="col-md-6 pull-right">
-                                            <a asp-action="AddLecture" asp-controller="Lecture" class="btn btn-success"><i class="material-icons"></i> <span>Add New Lecture</span></a>
+                                            <a asp-action="AddLecture" asp-controller="Lecture" class="btn btn-success"><i class="material-icons"></i> <span>Add New Lesson</span></a>
                                         </div>
 
                                     </div>
@@ -46,8 +44,8 @@
                                         <td>@item.Lecture_Id</td>
                                         <td>@item.Lecture_Name</td>
                                         <td>@item.LecturePost_Date</td>
-                                        <td>
-                                            <a href="#editSubjectModal" class="edit" id="edit" data-toggle="modal">
+                                        <td style="font-size:16px;">
+                                            <a asp-controller="lecture" asp-action="editLecture" asp-route-id="@item.Lecture_Id" class="edit" id="edit" >
                                                 <i class="fas fa-pen"></i>
                                             </a>
 
@@ -70,65 +68,8 @@
                             </div>
                         </div>
                     </div>
-                    <!-- Add Modal HTML -->
-                    <div id="addClassModal" class="modal fade">
-                        <div class="modal-dialog">
-                            <div class="modal-content">
-                                <form method="post" asp-controller="class" asp-action="addClass">
-                                    <div class="modal-header">
-                                        <h4 class="modal-title">Add Class</h4>
-                                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                                    </div>
-                                    <div class="modal-body">
-                                        @*<div class="form-group">
-                            <label>Class ID</label>
-                            <input type="text" class="form-control" required="" name="class_Id">
-                        </div>*@
-                                        <div class="form-group">
-                                            <label>Class Name</label>
-                                            <input type="text" class="form-control" required="" name="Class_Name">
-                                        </div>
-                                    </div>
-                                    <div class="modal-footer">
-                                        <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-                                        <input type="submit" class="btn btn-success" value="Add">
-                                    </div>
-                                </form>
-                            </div>
-                        </div>
-                    </div>
-
-
-                    <!-- Edit Modal HTML -->
-                    <div id="editClassModal" class="modal fade">
-                        <div class="modal-dialog">
-                            <div class="modal-content">
-                                <form method="post" asp-controller="class" asp-action="editClass">
-                                    <div class="modal-header">
-                                        <h4 class="modal-title">Edit Class</h4>
-                                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                                    </div>
-                                    <div class="modal-body">
-                                        <div class="form-group">
-                                            <label>Class ID</label>
-                                            <input type="text" class="form-control" required="" id="Class_Id" disabled="disabled">
-                                        </div>
-                                        <div class="form-group">
-                                            <label>Class Name</label>
-                                            <input type="text" class="form-control" required="" name="Class_Name" id="Class_Name">
-                                        </div>
-                                    </div>
-                                    <div class="modal-footer">
-                                        <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-                                        <input type="submit" class="btn btn-info" value="Save">
-                                        @*Added By Absar*@
-                                        <input type="hidden" name="Class_Id" id="Class_Id" />
-                                    </div>
-                                </form>
-                            </div>
-                        </div>
-                    </div>
-
+                    
+                    
 
                     <!-- Delete Modal HTML -->
                     <div id="deleteLectureModal" class="modal fade">
@@ -164,7 +105,7 @@
 
 
 
-    <footer class="footer">
+<footer class="footer">
         <div class=" container-fluid ">
             <nav>
                 <ul>
@@ -193,7 +134,6 @@
             </div>
         </div>
     </footer>
-</div>
 
 <!--   Core JS Files   -->
 <script src="~/Dashboard/assets/jqueryDataTable/jquery.min.js"></script>
