--- a/LMS/Areas/Teachers/Views/Lecture/AddLecture.cshtml
+++ b/LMS/Areas/Teachers/Views/Lecture/AddLecture.cshtml
@@ -13,7 +13,7 @@
         <div class="col-md-12">
             <div class="card">
                 <div class="card-header">
-                    <h5 class="title">Lecture Add</h5>
+                    <h5 class="title">Add Lesson</h5>
                 </div>
                 <div class="card-body">
                     <form enctype="multipart/form-data" asp-controller="Lecture" asp-action="AddLecture">
@@ -45,7 +45,7 @@
                             <div class="col-md-6 pr-1">
                                 <div class="form-group">
                                     <label>Date</label>
-                                    <input asp-for="LecturePost_Date" class="form-control">
+                                    <input asp-for="LecturePost_Date" type="date" class="form-control">
                                     @*<input class="form-control" type="datetime-local" id="birthdaytime" name="birthdaytime">*@
                                 </div>
                             </div>
