--- a/LMS/Areas/Teachers/Views/Test/AddTest.cshtml
+++ b/LMS/Areas/Teachers/Views/Test/AddTest.cshtml
@@ -1,7 +1,7 @@
 ﻿@model LMS.Domain.ViewModels.TestViewModel
 @{
     ViewData["Title"] = "AddTest";
-    Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
+    Layout = "~/Areas/Teachers/Views/Shared/_TeacherLayout.cshtml";
 }
 
 <div class="panel-header panel-header-sm">
@@ -25,7 +25,7 @@
                             <div class="col-md-6 pl-1">
                                 <div class="form-group">
                                     <label>Class Name</label>
-                                    <select id="ddlClass" asp-for="Class_Id" class="form-control" asp-items="@(new SelectList(ViewBag.ClassList, "Class_Id", "Class_Name"))"></select>
+                                    <select id="ddlClass" asp-for="Class_Id" class="form-control" asp-items="@ViewBag.ClassList"></select>
                                 </div>
                             </div>
                         </div>
@@ -33,13 +33,13 @@
                             <div class="col-md-6 pr-1">
                                 <div class="form-group">
                                     <label>Section Name</label>
-                                    <select id="ddlSection" asp-for="Section_Id" class="form-control" asp-items="@(new SelectList(ViewBag.SectionList, "Section_Id", "Section_Name"))"></select>
+                                    <select id="ddlSection" asp-for="Section_Id" class="form-control" asp-items="@ViewBag.SectionList"></select>
                                 </div>
                             </div>
                             <div class="col-md-6 pl-1">
                                 <div class="form-group">
                                     <label>Subject Name</label>
-                                    <select id="ddlSubject" asp-for="Subject_Id" class="form-control" asp-items="@(new SelectList(ViewBag.SubjectList, "Subject_Id", "Subject_Name"))"></select>
+                                    <select id="ddlSubject" asp-for="Subject_Id" class="form-control" asp-items="@ViewBag.SubjectList"></select>
                                 </div>
                             </div>
                         </div>
@@ -47,13 +47,13 @@
                             <div class="col-md-6 pr-1">
                                 <div class="form-group">
                                     <label>Start Time</label>
-                                    <input asp-for="Start_Time" class="form-control">
+                                    <input asp-for="Start_Time" type="time" class="form-control">
                                 </div>
                             </div>
                             <div class="col-md-6 pl-1">
                                 <div class="form-group">
                                     <label>End Time</label>
-                                    <input asp-for="End_Time" class="form-control">
+                                    <input asp-for="End_Time" type="time" class="form-control">
                                 </div>
                             </div>
                         </div>
