--- a/LMS/Areas/Teachers/Views/Test/AddTestDetails.cshtml
+++ b/LMS/Areas/Teachers/Views/Test/AddTestDetails.cshtml
@@ -1,89 +1,116 @@
-﻿@{
+﻿
+@{
     ViewData["Title"] = "AddTestDetails";
-    Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
+    Layout = "~/Areas/Teachers/Views/Shared/_TeacherLayout.cshtml";
 }
 
-<div class="dashboard" id="dashboard">
 
-    <div class="panel-header panel-header-sm">
-    </div>
-    <div class="content">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="card">
-                    <div class="card-header">
-                        <h5 class="title">Add Question</h5>
-                    </div>
-                    <div class="card-body">
-                        <form enctype="multipart/form-data">
-                            <div class="row">
-                                <div class="col-md-6 pr-1">
-                                    <div class="form-group">
-                                        <label>How many Questions you want to create?</label>
-                                        <input type="text" id="txtQuestionCount" class="form-control" placeholder="No of Question">
-                                    </div>
+<div class="panel-header panel-header-sm">
+</div>
+<div class="content">
+    <div class="row">
+        <div class="col-md-12">
+            <div class="card">
+                <div class="card-header">
+                    <h5 class="title">Add Question</h5>
+                </div>
+                <div class="card-body">
+                    <form enctype="multipart/form-data">
+                        <div class="row">
+                            <div class="col-md-6 pr-1">
+                                <div class="form-group">
+                                    <label>How many Questions you want to create?</label>
+                                    <input type="text" id="txtQuestionCount" class="form-control" placeholder="No of Question">
                                 </div>
                             </div>
-                            <div id="divQuestions">
+                        </div>
+                        <div id="divQuestions">
 
-                            </div>
+                        </div>
 
-                            <div class="row">
-                                <div class="col-md-2">
-                                    <div class="form-group">
-                                        <button id="btnSubmit" class="btn btn-primary btn-block">Submit</button>
-                                    </div>
+                        <div class="row">
+                            <div class="col-md-2">
+                                <div class="form-group">
+                                    <button id="btnSubmit" class="btn btn-primary btn-block">Submit</button>
                                 </div>
                             </div>
-                            @{ 
-                                TempData["TestId"] = ViewBag.TestId;
-                            }
-                        </form>
-                    </div>
+                        </div>
+                        @{
+                            TempData["TestId"] = ViewBag.TestId;
+                        }
+                    </form>
                 </div>
             </div>
+        </div>
 
+    </div>
+</div>
+<footer class="footer">
+    <div class=" container-fluid ">
+        <nav>
+            <ul>
+                <li>
+                    <a href="https://www.creative-tim.com">
+                        Karachi Grammar School
+                    </a>
+                </li>
+                <li>
+                    <a href="http://presentation.creative-tim.com">
+                        About Us
+                    </a>
+                </li>
+                <li>
+                    <a href="http://blog.creative-tim.com">
+                        Blog
+                    </a>
+                </li>
+            </ul>
+        </nav>
+        <div class="copyright" id="copyright">
+            &copy;
+            <script>
+                document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))
+            </script>, Designed by <a href="https://www.invisionapp.com" target="_blank">Invision</a>. Coded by <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a>.
         </div>
     </div>
-    <footer class="footer">
-        <div class=" container-fluid ">
-            <nav>
-                <ul>
-                    <li>
-                        <a href="https://www.creative-tim.com">
-                            Karachi Grammar School
-                        </a>
-                    </li>
-                    <li>
-                        <a href="http://presentation.creative-tim.com">
-                            About Us
-                        </a>
-                    </li>
-                    <li>
-                        <a href="http://blog.creative-tim.com">
-                            Blog
-                        </a>
-                    </li>
-                </ul>
-            </nav>
-            <div class="copyright" id="copyright">
-                &copy;
-                <script>
-                    document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))
-                </script>, Designed by <a href="https://www.invisionapp.com" target="_blank">Invision</a>. Coded by <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a>.
-            </div>
-        </div>
-    </footer>
-</div>
+</footer>
 
 <!--   Core JS Files   -->
 <script src="~/Dashboard/assets/jqueryDataTable/jquery.min.js"></script>
 <script src="~/Dashboard/assets/jqueryDataTable/jquery.dataTables.js"></script>
+<link href="~/Dashboard/assets/js/toastr/toastr.css" rel="stylesheet" />
+<script src="~/Dashboard/assets/js/toastr/toastr.js"></script>
 <script>
+
+
 
     var data = new FormData();
 
     $(document).ready(function () {
+
+        toastr.options = {
+            "positionClass": "toast-top-center",
+            "showDuration": "5000",
+            "hideDuration": "5000",
+            "timeOut": "5000",
+            "extendedTimeOut": "5000",
+        };
+
+
+
+        var messageError = '@(ViewBag.Error)';
+        var messageSuccess = '@(ViewBag.Success)';
+
+
+        if (messageSuccess.length > 0) {
+
+            toastr.success(messageSuccess);
+        }
+        else if (messageError > 0)  {
+            toastr.error(messageError);
+        }
+
+
         // Activate tooltip
         $('[data-toggle="tooltip"]').tooltip();
 
@@ -162,7 +189,11 @@
 
     function generateFileControl(id, ddl) {
         $('#' + id).empty();
-        $('#' + id).append(`<input type="file" class="form-control"/>`);
+        $('#' + id).append(`<div class="form-group">
+                            <label>File Upload</label>
+                            <br />
+                            <input type="file" class="form-control" style="opacity: 1;margin-top: 30px;height: 40px;font-size: 1.3em;" />
+                            </div>`);
     }
 
     function getDataFromDiv(questions) {
@@ -235,7 +266,7 @@
                 contentType: false,
                 data: data,
                 success: function Success(response) {
-                    debugger;
+
                     if (response.d == "1") {
                         toastr.success('Data successfully saved', 'Success')
                     }
@@ -244,7 +275,7 @@
                     }
                 },
                 error: function (msg) {
-                    debugger;
+
                     toastr.error('Failed to Save Data', 'Error!')
                 }
             });
