--- a/LMS/Areas/Teachers/Views/Test/ManageTest.cshtml
+++ b/LMS/Areas/Teachers/Views/Test/ManageTest.cshtml
@@ -1,7 +1,7 @@
 ﻿@model List<LMS.Domain.ViewModels.TestDetailViewModel>
 @{
     ViewData["Title"] = "ManageTest";
-    Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
+    Layout = "~/Areas/Teachers/Views/Shared/_TeacherLayout.cshtml";
 }
 
 <div class="panel-header panel-header-sm">
@@ -16,7 +16,7 @@
                             <div class="table-title">
                                 <div class="row">
                                     <div class="col-md-6">
-                                        <h2>Manage <b>Tests</b></h2>
+                                        <h2><b> Manage Tests Questions</b></h2>
                                     </div>
                                     <div class="col-md-6 pull-right">
                                         <a asp-action="AddTestDetails" asp-controller="Test" asp-route-id="@ViewBag.TestId" class="btn btn-success"><i class="material-icons">&#xE147;</i> <span>Add Questions</span></a>
